--- a/awesome-code-quiz/style.css
+++ b/awesome-code-quiz/style.css
@@ -5,7 +5,9 @@
   text-align: left;
 }
 
-/* .time {
-    text-align: right;
-    
+/* li {
+    list-style: none;
 } */
+button {
+    background-color: lightcoral;
+}
